--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>WW2: D-Day</title>
       <link rel="stylesheet" href="style.css">
       <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-      <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'/>
    </head>
    <body>
       <div class="the-page" id="about-page">
@@ -127,14 +127,24 @@
             </div>
             <div id="sources">
                <input type="checkbox" id="title" />
-               <label for="title"><b>Sources</b></label>
+               <label for="title" class="sources-title">Sources</label>
                <div class="sources-content">
                   <ul>
-                     <li><a href="https://www.army.mil/d-day/history.html">Army.mil</a></li>
-                     <li><a
-                        href="https://www.britannica.com/event/Normandy-Invasion/D-Day-June-6-1944">britannica.com</a>
+                     <li>
+                        <a href="https://www.army.mil/d-day/history.html">
+                           Army.mil
+                        </a>
                      </li>
-                     <li><a href="https://en.wikipedia.org/wiki/Normandy_landings">wikipedia.org</a></li>
+                     <li>
+                        <a href="https://www.britannica.com/event/Normandy-Invasion/D-Day-June-6-1944">
+                           britannica.com
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://en.wikipedia.org/wiki/Normandy_landings">wikipedia.org
+
+                        </a>
+                     </li>
                   </ul>
                </div>
             </div>
