--- a/media.html
+++ b/media.html
@@ -7,7 +7,7 @@
       <title>WW2: D-Day</title>
       <link rel="stylesheet" href="style.css">
       <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-      <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'/>
    </head>
    <body>
       <div class="the-page" id="media-page">
@@ -21,27 +21,27 @@
          </header>
          <div class="page-content rounded">
             <div class="gallery">
-               <figure class="gallery-figure first">
+               <figure class="gallery-figure">
                   <img src="images/american-troops.png" alt="American troops wading from landing craft toward Omaha Beach" class="rounded gallery-image">
                   <figcaption>American troops wading from landing craft toward Omaha Beach, under fire of German artillery.</figcaption>
                </figure>
-               <figure class="gallery-figure second">
+               <figure class="gallery-figure">
                   <img src="images/troops-helping.png" alt="American troops helping others whose landing craft was sunk" class="rounded gallery-image">
                   <figcaption>American troops helping others whose landing craft was sunk</figcaption>
                </figure>
-               <figure class="gallery-figure third">
+               <figure class="gallery-figure">
                   <img src="images/injured.png" alt="American troops injured while storming Omaha Beach" class="rounded gallery-image">
                   <figcaption>American troops injured while storming Omaha Beach</figcaption>
                </figure>
-               <figure class="gallery-figure fourth">
+               <figure class="gallery-figure">
                   <img src="images/canadians.png" alt="Canadian soldiers landing on Juno Beach" class="rounded gallery-image">
                   <figcaption>Canadian soldiers landing on Juno Beach</figcaption>
                </figure>
-               <figure class="gallery-figure fifth">
+               <figure class="gallery-figure">
                   <img src="images/germans-captured.png" alt="German prisoners of war captured after the D-Day landings" class="rounded gallery-image">
                   <figcaption>German prisoners of war captured after the D-Day landings</figcaption>
                </figure>
-               <figure class="gallery-figure sixth">
+               <figure class="gallery-figure">
                   <img src="images/gemans-surrendering.png" alt="German soldiers surrendering" class="rounded gallery-image">
                   <figcaption>German soldiers surrendering</figcaption>
                </figure>
