am remediat încă ceva

--- a/troops.html
+++ b/troops.html
@@ -84,7 +84,7 @@
                <input type="checkbox" id="title" />
                <label for="title" class="sources-title">Sources</label>
                <div class="sources-content">
-                  <ul>
+                  <ul class="list">
                      <li>
                         <a href="https://www.army.mil/d-day/history.html">
                            Army.mil
