--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
             <li><a href="gastric_bypass.html">Gastric bypass</a></li>
             <li><a href="gastric_band.html">Gastric band</a></li>
-            <li class=""><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
