--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,44 @@
             <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li>
-                <ahref="gastric_sleeve.html">Gastric sleeve</a>
-                </li>
+                <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
                 <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-                <li><a class="active" href="gastric_band.html">Gastric band</a></li>
-                <li class=""><a href="contact.html">Contact</a></li>
+                <li><a href="gastric_band.html">Gastric band</a></li>
+                <li><a href="contact.html" class="active" >Contact</a></li>
             </ul>
             </nav>
         </header>
-        <main class="contact">
+
+        <main class="main-content contact">
+            <!-- Breadcrumb navigation-->
+            <ul class="breadcrumb">
+              <li><a href="index.html" class="breadcrumb-item">Home</a></li>
+              <li>
+                <a href="#" class="breadcrumb-item current-page"
+                  ><span aria-current="page">Contact</span></a
+                >
+              </li>
+            </ul>
+            <h1>Contact</h1>
+            <p class="item-description content-d">
+                We understand that taking the first step towards weight
+                loss surgery can be daunting, and we're here to help.
+            </p>
+            <p class="item-description content-d">
+                If you have any questions or concerns, please don't
+                hesitate to reach out to us
+            </p>
+            <form action="#" method="post" class="contact-form">
+                  <input type="text" placeholder="My name is" name="name" required>
+                  <input type="email" placeholder="My e-mail is" name="email" required>
+                  <textarea name="message" placeholder="My message is..." required></textarea>
+                <a href="#" class="hero-button-2">Read more</a>
+              </form>
 
         </main>
         </div>
+        <footer class="footer">
+            <p>Author: Silviu</p>
+        </footer>
     <body> 
 </html>
