--- a/gastric_bypass.html
+++ b/gastric_bypass.html
@@ -33,11 +33,11 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <ahref="gastric_sleeve.html">Gastric sleeve</a>
+              <a href="gastric_sleeve.html">Gastric sleeve</a>
             </li>
             <li><a class="active"  href="gastric_bypass.html">Gastric bypass</a></li>
             <li><a href="gastric_band.html">Gastric band</a></li>
-            <li class=""><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
