--- a/gastric_sleeve.html
+++ b/gastric_sleeve.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="gastric_bypass.html">Gastric bypass</a></li>
             <li><a href="gastric_band.html">Gastric band</a></li>
-            <li class=""><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
