--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fagurel </title>
-    <link rel="icon" href="./Photo/photo4.png" type="image/icon type">
+    <link rel="icon" href="./Photo/photo4.png" type="image/png type">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,136 +19,135 @@
                 <li><a href="contact.html" class="menu-item">contact</a></li>
             </ul>
     </header>
-    </section>
-        <div class="main">
-            <h2>Bine ai venit în Regatul albinelor! </h2>
-            <p> Albinele își au casa în zona Scroviștea, mai exact în satul Bălteni, la jumătate de oră 
-                de București.
-                Situl natural este foarte bine conservat, fiind acoperit de păduri mixte cu stejar, tei, carpen, 
-                înconjurând astfel
-                stupină cu un mozaic de păduri, lacuri și pajiști.
-            </p> 
-            <img class="photo" src="photo/photo6.jpg" alt="stup albine">
-            <h3>  Află mai multe despre noi! </h3>
-            <section class="showcase">
-                <div class="container grid">
-                    <div class="intro-text">
-                        <h1>  Stupina din Scroviștea </h1>
-                        <p> Suntem o familie care de patru generații a obținut miere de albine în mod tradițional. 
-                            Am transmis rețetele din prisaca albinelor căutând mereu cele mai performante metode.
-                            Am promis să luăm ce este mai bun de la natură și mediu pentru a avea o viață cât mai 
-                            sănătoasă 
+    <div class="main">
+        <h2>Bine ai venit în Regatul albinelor! </h2>
+        <p> Albinele își au casa în zona Scroviștea, mai exact în satul Bălteni, la jumătate de oră 
+            de București.
+            Situl natural este foarte bine conservat, fiind acoperit de păduri mixte cu stejar, tei, carpen, 
+            înconjurând astfel
+            stupină cu un mozaic de păduri, lacuri și pajiști.
+        </p> 
+        <img class="photo" src="photo/photo6.jpg" alt="stup albine">
+        <h3>  Află mai multe despre noi! </h3>
+        <section class="showcase">
+            <div class="container grid">
+                <div class="intro-text">
+                    <h1>  Stupina din Scroviștea </h1>
+                    <p> Suntem o familie care de patru generații a obținut miere de albine în mod tradițional. 
+                        Am transmis rețetele din prisaca albinelor căutând mereu cele mai performante metode.
+                        Am promis să luăm ce este mai bun de la natură și mediu pentru a avea o viață cât mai 
+                        sănătoasă 
+                    </p>
+                </div>
+                <div class="intro-form card">
+                    <h1> Adoptă un stup </h1>
+                    <form>
+                        <div class= "form-control">
+                            <input  type="text" name="name"
+                                    placeholder="Nume"
+                                    required>
+                        </div>
+                        <div class= "form-control">
+                            <input  type="text" name="telefon"
+                                    placeholder="Telefon"
+                                    required>
+                        </div>
+                        <div class= "form-control">
+                            <input  type="email" name="email"
+                                    placeholder="Email"
+                                    required>
+                        </div>
+                            <input  type="submit" value="Trimite"
+                                    class="buton trimite">
+                    </form>
+                        
+                </div>
+            </div>
+        </section>
+        <section class= "magazin">
+            <h2> Produsele noastre</h2>
+            <div class="produse">
+                <div class ="cardmiere">
+                    <h4> Miere Poliflora </h4>
+                    <img src="./Photo/borcan.jpg" alt="miere poliflora">
+                        <div class= "produs">
+                            <p> Mierea poliflora cruda 250g </p>
+                            <p style='text-align: center;'>
+                            <a class= "button" href="#"> Cumpără</a>
+                            </p>
+                        </div>
+                </div>
+                <div class ="cardmiere">
+                    <h4> Miere de Tei </h4>
+                    <img src="./Photo/borcan.jpg" alt="miere de tei">
+                        <div class= "produs">
+                        <p> Mierea de Tei cruda 250g </p>
+                        <p style='text-align: center;'>
+                        <a class= "button" href="#"> Cumpără </a>
                         </p>
-                    </div>
-                    <div class="intro-form card">
-                        <h1> Adoptă un stup </h1>
-                        <form>
-                            <div class= "form-control">
-                                <input  type="text" name="name"
-                                        placeholder="Nume"
-                                        required>
-                            </div>
-                            <div class= "form-control">
-                                <input  type="text" name="telefon"
-                                        placeholder="Telefon"
-                                        required>
-                            </div>
-                            <div class= "form-control">
-                                <input  type="email" name="email"
-                                        placeholder="Email"
-                                        required>
-                            </div>
-                                <input  type="submit" value="Trimite"
-                                        class="buton trimite">
-                        </form>
-                          
-                    </div>
+                        </div>
                 </div>
-            </section>
-            <section class= "magazin">
-                <h2> Produsele noastre</h2>
-                <div class="produse">
-                    <div class ="cardmiere">
-                        <h4> Miere Poliflora </h4>
-                        <img src="./Photo/borcan.jpg" alt="miere poliflora">
-                            <div class= "produs">
-                                <p> Mierea poliflora cruda 250g </p>
-                                <p style='text-align: center;'>
-                                <a class= "button" href="#"> Cumpără</a>
-                                </p>
-                            </div>
-                    </div>
-                    <div class ="cardmiere">
-                        <h4> Miere de Tei </h4>
-                        <img src="./Photo/borcan.jpg" alt="miere de tei">
-                            <div class= "produs">
-                            <p> Mierea de Tei cruda 250g </p>
-                            <p style='text-align: center;'>
-                            <a class= "button" href="#"> Cumpără </a>
-                            </p>
-                            </div>
-                    </div>
-                    <div class ="cardmiere">
-                        <h4> Miere de Salcam </h4>
-                        <img src="./Photo/borcan.jpg" alt="miere de salcam">
-                            <div class= "produs">
-                            <p> Miere de Salcam cruda 250g </p>
-                            <p style='text-align: center;'>
-                            <a class= "button" href="#"> Cumpără </a>
-                            </p>
-                            </div>
-                    </div>
-            </section>
-            <div class="footer">
-                <div class="footer-social">
-                    <h2> Fagurel </h2>
-                    <ul class="footerSocial">
-                        <li>
-                            <a href="#">
-                                <i class="fa-brands fa-facebook-square"></i>
-                                <span>Facebook</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-brands fa-instagram-square"></i>
-                                <span>Instagram</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-brands fa-twitter-square"></i>
-                                <span>Twitter</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-brands fa-youtube-square"></i>
-                                <span>Youtube</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-brands fa-whatsapp-square"></i>
-                                <span>WhatsApp</span>
-                            </a>
-                        </li>
-				    </ul>      
+                <div class ="cardmiere">
+                    <h4> Miere de Salcam </h4>
+                    <img src="./Photo/borcan.jpg" alt="miere de salcam">
+                        <div class= "produs">
+                        <p> Miere de Salcam cruda 250g </p>
+                        <p style='text-align: center;'>
+                        <a class= "button" href="#"> Cumpără </a>
+                        </p>
+                        </div>
                 </div>
-                <div class="links">
-				    <h2>Important</h2>
-				        <ul>
-					        <li> <a href="#faq">Despre noi</a>
-					        </li>
-                            <li> <a href="#cookies-policy">Politica de Cookies</a>
-					        </li>
-                            <li> <a href="#terms-of-services">Termeni</a>
-					        </li>
-                            <li> <a href="#support">Suport</a>
-					        </li>
-				        </ul>
-			    </div>
-		    </div>
-        </div>
+        </section>
+        <div class="footer">
+            <div class="footer-social">
+                <h2> Fagurel </h2>
+                <ul class="footerSocial">
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <span>Facebook</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <span>Instagram</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter-square"></i>
+                            <span>Twitter</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-youtube-square"></i>
+                            <span>Youtube</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-whatsapp-square"></i>
+                            <span>WhatsApp</span>
+                        </a>
+                    </li>
+                </ul>      
+            </div>
+            <div class="links">
+                <h2>Important</h2>
+                    <ul>
+                        <li> <a href="#faq">Despre noi</a>
+                        </li>
+                        <li> <a href="#cookies-policy">Politica de Cookies</a>
+                        </li>
+                        <li> <a href="#terms-of-services">Termeni</a>
+                        </li>
+                        <li> <a href="#support">Suport</a>
+                        </li>
+                    </ul>
+            </div>
+		</div>
+    </div>
 </body>
 </html>
