--- a/gastric_sleeve.html
+++ b/gastric_sleeve.html
@@ -9,20 +9,21 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
     />
+    <link rel="icon" type="image/x-icon" href="/images/baricare_logo.svg">
     <title>BariCare - Gastric Sleeve</title>
   </head>
   <body>
     <div class="wrapper">
       <!-- Header (Logo + Nav Menu)-->
       <header>
-        <span class="logo">
+        <div class="logo">
           <img
             src="/images/baricare_logo.svg"
             class="logo-svg"
             alt="BariCare Logo"
           />
           <p>Care</p>
-        </span>
+        </div>
         <input type="checkbox" class="nav-toggle" id="nav-toggle" />
         <label
           for="nav-toggle"
@@ -154,7 +155,8 @@
       </main>
     </div>
     <footer class="footer">
-        <p>Author: Silviu</p>
-      </footer>
+      <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+      <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
+    </footer>
   </body>
 </html>
