--- a/contact.html
+++ b/contact.html
@@ -9,67 +9,66 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
     />
+    <link rel="icon" type="image/x-icon" href="/images/baricare_logo.svg">
     <title>BariCare - Contact</title>
   </head>
-    <body>
-        <div class="wrapper">
-        <!-- Header (Logo + Nav Menu)-->
-        <header>
-            <span class="logo">
-            <img
-                src="/images/baricare_logo.svg"
-                class="logo-svg"
-                alt="BariCare Logo"
-            />
-            <p>Care</p>
-            </span>
-            <input type="checkbox" class="nav-toggle" id="nav-toggle" />
-            <label
-            for="nav-toggle"
-            class="nav-toggle-label"
-            aria-label="Menu button"
-            ></label>
-            <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
-                <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-                <li><a href="gastric_band.html">Gastric band</a></li>
-                <li><a href="contact.html" class="active" >Contact</a></li>
-            </ul>
-            </nav>
-        </header>
-
-        <main class="main-content contact">
-            <!-- Breadcrumb navigation-->
-            <ul class="breadcrumb">
-              <li><a href="index.html" class="breadcrumb-item">Home</a></li>
-              <li>
-                <a href="#" class="breadcrumb-item current-page"
-                  ><span aria-current="page">Contact</span></a
-                >
-              </li>
-            </ul>
-            <h1>Contact</h1>
-            <p class="item-description content-d">
-                We understand that taking the first step towards weight
-                loss surgery can be daunting, and we're here to help.
-            </p>
-            <p class="item-description content-d">
-                If you have any questions or concerns, please don't
-                hesitate to reach out to us
-            </p>
-            <form action="#" method="post" class="contact-form">
-                  <input type="text" placeholder="My name is" name="name" required>
-                  <input type="email" placeholder="My e-mail is" name="email" required>
-                  <textarea name="message" placeholder="My message is..." required></textarea>
-                <a href="#" class="hero-button-2">Read more</a>
-              </form>
-
-        </main>
+  <body>
+      <div class="wrapper">
+      <!-- Header (Logo + Nav Menu)-->
+      <header>
+        <div class="logo">
+          <img
+              src="/images/baricare_logo.svg"
+              class="logo-svg"
+              alt="BariCare Logo"
+          />
+          <p>Care</p>
         </div>
-        <footer class="footer">
-            <p>Author: Silviu</p>
-        </footer>
-    <body> 
+        <input type="checkbox" class="nav-toggle" id="nav-toggle" />
+        <label for="nav-toggle" class="nav-toggle-label" aria-label="Menu button"></label>
+        <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
+              <li><a href="gastric_bypass.html">Gastric bypass</a></li>
+              <li><a href="gastric_band.html">Gastric band</a></li>
+              <li><a href="contact.html" class="active" >Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-content contact">
+          <!-- Breadcrumb navigation-->
+          <ul class="breadcrumb">
+            <li>
+              <a href="index.html" class="breadcrumb-item">Home</a>
+            </li>
+            <li>
+              <a href="#" class="breadcrumb-item current-page">
+                <span aria-current="page">Contact</span></a>
+            </li>
+          </ul>
+          <h1>Contact</h1>
+            <div>
+              <p class="item-description content-d">
+                  We understand that taking the first step towards weight
+                  loss surgery can be daunting, and we're here to help.
+              </p>
+              <p class="item-description content-d">
+                  If you have any questions or concerns, please don't
+                  hesitate to reach out to us.
+              </p>
+            </div>
+          <form action="#" method="post" class="contact-form">
+            <input type="text" placeholder="My name is" name="name" required>
+            <input type="email" placeholder="My e-mail is" name="email" required>
+            <textarea name="message" placeholder="My message is..." required></textarea>
+            <a href="#" class="hero-button-2">Send</a>
+          </form>
+        </main>
+      </div>
+      <footer class="footer">
+        <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+        <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
+      </footer>
+  <body> 
 </html>
