forgot to add the new footer to the other pages :o

--- a/gastric_sleeve.html
+++ b/gastric_sleeve.html
@@ -155,8 +155,19 @@
       </main>
     </div>
     <footer class="footer">
-      <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
-      <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
+      <div class="footer-part">
+        <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+        <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
+    </div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
+        <li><a href="gastric_bypass.html">Gastric bypass</a></li>
+        <li><a href="gastric_band.html">Gastric band</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
     </footer>
   </body>
 </html>
