fixed logo link

--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,16 @@
       <div class="wrapper">
       <!-- Header (Logo + Nav Menu)-->
       <header>
-        <div class="logo">
-          <img
+        <a href="index.html" class="logo-link">
+          <div class="logo">
+            <img
               src="/images/baricare_logo.svg"
               class="logo-svg"
               alt="BariCare Logo"
-          />
-          <p>Care</p>
-        </div>
+            />
+            <p>Care</p>
+          </div>
+        </a>
         <input type="checkbox" class="nav-toggle" id="nav-toggle" />
         <label for="nav-toggle" class="nav-toggle-label" aria-label="Menu button"></label>
         <nav>
