--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Islanda</h2>
     </header>
     <main>
-        <article>
+        <article class="descriere">
             <h1>Descopera Islanda, un spectacol de lumini si umbre</h1>
             <p>Islanda este o destinatie cu atat mai incitanta prin natura ei neatinsa, exotica si mistica, 
                 cu gheizere ce se inalta spre cer, cu vulcani activi si campuri de lava, cascade vijelioase,
@@ -40,7 +40,7 @@
                  dintre ele amintite prin monumente si placi comemorative.
             </p>
         </article>
-        <div class="containers">
+        <article class="containers">
             <div class="content-item">
                 <a href="reykjavik.html" alt="5 zile in Reykjavik">
                     <img src="../poze_index/reykjavik.jpg"/>
@@ -77,7 +77,7 @@
                 </a>
                 <p>Impresii de calatorie</p>
             </div>
-        </div>
+        </article>
         
     </main>
     <footer>
