--- a/gastric_band.html
+++ b/gastric_band.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
     />
     <link rel="icon" type="image/x-icon" href="/images/baricare_logo.svg">
-    <title>BariCare - Gastric Bypass</title>
+    <title>BariCare - Gastric Band</title>
   </head>
   <body>
     <div class="wrapper">
