--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,23 @@
         <input type="checkbox" class="nav-toggle" id="nav-toggle" />
         <label for="nav-toggle" class="nav-toggle-label" aria-label="Menu button"></label>
         <nav>
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
-              <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-              <li><a href="gastric_band.html">Gastric band</a></li>
-              <li><a href="contact.html" class="active" >Contact</a></li>
-          </ul>
+            <ul>
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="gastric_sleeve.html">Gastric sleeve</a>
+              </li>
+              <li>
+                <a href="gastric_bypass.html">Gastric bypass</a>
+              </li>
+              <li>
+                <a href="gastric_band.html">Gastric band</a>
+              </li>
+              <li>
+                <a href="contact.html" class="active" >Contact</a>
+              </li>
+            </ul>
         </nav>
       </header>
       <main class="main-content contact">
