more formatting (I hope)

--- a/contact.html
+++ b/contact.html
@@ -27,25 +27,30 @@
           </div>
         </a>
         <input type="checkbox" class="nav-toggle" id="nav-toggle" />
-        <label for="nav-toggle" class="nav-toggle-label" aria-label="Menu button"></label>
+        <label
+          for="nav-toggle"
+          class="nav-toggle-label"
+          aria-label="Menu button"
+          >
+        </label>
         <nav>
-            <ul>
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li>
-                <a href="gastric_sleeve.html">Gastric sleeve</a>
-              </li>
-              <li>
-                <a href="gastric_bypass.html">Gastric bypass</a>
-              </li>
-              <li>
-                <a href="gastric_band.html">Gastric band</a>
-              </li>
-              <li>
-                <a href="contact.html" class="active" >Contact</a>
-              </li>
-            </ul>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="gastric_sleeve.html">Gastric sleeve</a>
+            </li>
+            <li>
+              <a href="gastric_bypass.html">Gastric bypass</a>
+            </li>
+            <li>
+              <a href="gastric_band.html">Gastric band</a>
+            </li>
+            <li>
+              <a class="active" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </nav>
       </header>
       <main class="main-content contact">
@@ -85,11 +90,21 @@
         </div>
         <div class="footer-links">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
-            <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-            <li><a href="gastric_band.html">Gastric band</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="gastric_sleeve.html">Gastric sleeve</a>
+            </li>
+            <li>
+              <a href="gastric_bypass.html">Gastric bypass</a>
+            </li>
+            <li>
+              <a href="gastric_band.html">Gastric band</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
           </ul>
         </div>
       </footer>
