--- a/gastric_bypass.html
+++ b/gastric_bypass.html
@@ -31,16 +31,25 @@
           for="nav-toggle"
           class="nav-toggle-label"
           aria-label="Menu button"
-        ></label>
+          >
+        </label>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
             <li>
               <a href="gastric_sleeve.html">Gastric sleeve</a>
             </li>
-            <li><a class="active"  href="gastric_bypass.html">Gastric bypass</a></li>
-            <li><a href="gastric_band.html">Gastric band</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a class="active" href="gastric_bypass.html">Gastric bypass</a>
+            </li>
+            <li>
+              <a href="gastric_band.html">Gastric band</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -159,11 +168,21 @@
       </div>
       <div class="footer-links">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
-          <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-          <li><a href="gastric_band.html">Gastric band</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="gastric_sleeve.html">Gastric sleeve</a>
+          </li>
+          <li>
+            <a href="gastric_bypass.html">Gastric bypass</a>
+          </li>
+          <li>
+            <a href="gastric_band.html">Gastric band</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
         </ul>
       </div>
     </footer>
