--- a/gastric_sleeve.html
+++ b/gastric_sleeve.html
@@ -59,9 +59,9 @@
         <ul class="breadcrumb">
           <li><a href="index.html" class="breadcrumb-item">Home</a></li>
           <li>
-            <a href="#" class="breadcrumb-item current-page"
-              ><span aria-current="page">Gastric sleeve</span></a
-            >
+            <a href="#" class="breadcrumb-item current-page">
+              <span aria-current="page">Gastric sleeve</span>
+            </a>
           </li>
         </ul>
 
@@ -167,7 +167,9 @@
     </div>
     <footer class="footer">
       <div class="footer-part">
-        <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+        <p>
+          <i class="fa-regular fa-copyright"></i>Silviu 2023
+        </p>
         <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
       </div>
       <div class="footer-links">
