--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <p class="item-description">
               It is a weight loss procedure that involves reducing the size of the stomach by removing a large portion of it.
             </p>
-            <a href="gastric_sleeve.html" class="read-more-button"><i class="fa-solid fa-arrow-right"></i></a>
+            <a href="gastric_sleeve.html" class="read-more-button">
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
           <!-- Item #2-->
           <div class="item">
@@ -90,7 +92,9 @@
             <p class="item-description">
               It is a weight loss procedure that involves creating a smaller stomach and rerouting the small intestine to this new stomach.
             </p>
-            <a href="gastric_bypass.html" class="read-more-button"><i class="fa-solid fa-arrow-right"></i></a>
+            <a href="gastric_bypass.html" class="read-more-button">
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
           <!-- Item #3-->
           <div class="item">
@@ -101,14 +105,18 @@
             <p class="item-description">
               It is a weight loss procedure that involves placing an adjustable band around the upper part of the stomach to create a small stomach pouch.
             </p>
-            <a href="gastric_band.html" class="read-more-button"><i class="fa-solid fa-arrow-right"></i></a>
+            <a href="gastric_band.html" class="read-more-button">
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
         </div>
       </section>
     </div>
     <footer class="footer">
       <div class="footer-part">
-        <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+        <p>
+          <i class="fa-regular fa-copyright"></i>Silviu 2023
+        </p>
         <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
       </div>
       <div class="footer-links">
