--- a/contact.html
+++ b/contact.html
@@ -61,20 +61,21 @@
             </li>
             <li>
               <a href="#" class="breadcrumb-item current-page">
-                <span aria-current="page">Contact</span></a>
+                <span aria-current="page">Contact</span>
+              </a>
             </li>
           </ul>
           <h1>Contact</h1>
-            <div>
-              <p class="item-description content-d">
-                  We understand that taking the first step towards weight
-                  loss surgery can be daunting, and we're here to help.
-              </p>
-              <p class="item-description content-d">
-                  If you have any questions or concerns, please don't
-                  hesitate to reach out to us.
-              </p>
-            </div>
+          <div>
+            <p class="item-description content-d">
+                We understand that taking the first step towards weight
+                loss surgery can be daunting, and we're here to help.
+            </p>
+            <p class="item-description content-d">
+                If you have any questions or concerns, please don't
+                hesitate to reach out to us.
+            </p>
+          </div>
           <form action="#" method="post" class="contact-form">
             <input type="text" placeholder="My name is" name="name" required>
             <input type="email" placeholder="My e-mail is" name="email" required>
@@ -85,7 +86,9 @@
       </div>
       <footer class="footer">
         <div class="footer-part">
-          <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+          <p>
+            <i class="fa-regular fa-copyright"></i>Silviu 2023
+          </p>
           <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
         </div>
         <div class="footer-links">
