--- a/gastric_band.html
+++ b/gastric_band.html
@@ -57,11 +57,13 @@
       <main class="main-content">
         <!-- Breadcrumb navigation-->
         <ul class="breadcrumb">
-          <li><a href="index.html" class="breadcrumb-item">Home</a></li>
           <li>
-            <a href="#" class="breadcrumb-item current-page"
-              ><span aria-current="page">Gastric band</span></a
-            >
+            <a href="index.html" class="breadcrumb-item">Home</a>
+          </li>
+          <li>
+            <a href="#" class="breadcrumb-item current-page">
+              <span aria-current="page">Gastric band</span>
+            </a>
           </li>
         </ul>
 
@@ -172,7 +174,9 @@
     </div>
     <footer class="footer">
       <div class="footer-part">
-        <p><i class="fa-regular fa-copyright"></i>Silviu 2023</p>
+        <p>
+          <i class="fa-regular fa-copyright"></i>Silviu 2023
+        </p>
         <a href="https://www.linkedin.com/in/alexscripcariuc/" target="_blank"><i class="fa-brands fa-linkedin social"></i></a>
       </div>
       <div class="footer-links">
