--- a/gastric_sleeve.html
+++ b/gastric_sleeve.html
@@ -57,7 +57,9 @@
       <main class="main-content">
         <!-- Breadcrumb navigation-->
         <ul class="breadcrumb">
-          <li><a href="index.html" class="breadcrumb-item">Home</a></li>
+          <li>
+            <a href="index.html" class="breadcrumb-item">Home</a>
+          </li>
           <li>
             <a href="#" class="breadcrumb-item current-page">
               <span aria-current="page">Gastric sleeve</span>
