--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contact </title>
-    <link rel="icon" href="./Photo/photo4.png" type="image/icon type">
-    <link rel="stylesheet" href="style-sheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Contact </title>
+  <link rel="icon" href="./Photo/photo4.png" type="image/png">
+  <link rel="stylesheet" href="style-sheet.css">
 </head>
 <body>
   <header class="header">
@@ -50,15 +50,15 @@
       <div class="contact-form">
         <form>
           <div>
-            <input type="text" class="form-control" placeholder="Nume">
-            <input type="text" class="form-control" placeholder="Prenume">
+          <input type="text" class="form-control" placeholder="Nume">
+          <input type="text" class="form-control" placeholder="Prenume">
           </div>
           <div>
-            <input type="email" class="form-control" placeholder="E-mail">
-            <input type="text" class="form-control" placeholder="Telefon">
+          <input type="email" class="form-control" placeholder="E-mail">
+          <input type="text" class="form-control" placeholder="Telefon">
           </div>
           <textarea rows="5" placeholder="Lasă-ne un mesaj" class="form-control"></textarea>
-            <input type="submit" class="send-btn" value="Trimite">
+          <input type="submit" class="send-btn" value="Trimite">
         </form>
         <div>
           <img src="./Photo/photo13.jpg" alt="stupina bio">
@@ -76,7 +76,6 @@
         <a href="#" class="fab fa-instagram"></a>
         <a href="#" class="fab fa-linkedin"></a>
         <a href="#" class="fab fa-youtube"></a>
-        
       </div>
     </div>
   </section>
