--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title> Fagurel </title>
-    <link rel="icon" href="./Photo/photo4.png" type="image/png type">
+    <link rel="icon" href="./Photo/photo4.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,8 +26,12 @@
             Situl natural este foarte bine conservat, fiind acoperit de păduri mixte cu stejar, tei, carpen, 
             înconjurând astfel
             stupină cu un mozaic de păduri, lacuri și pajiști.
+            <br>
+            În prezent, avem propria stupină formată din aproximativ 90 de familii de albine pe care le îngrijim cu mare bucurie. 
+            Suntem recunoscători că în ultimii ani am avut posibilitatea să oferim mierea produsă la noi în 
+            stupină cât mai multor oameni și îți mulțumim că ne vizitezi.
         </p> 
-        <img class="photo" src="photo/photo6.jpg" alt="stup albine">
+        <img class="photo" src="photo/photo10.png" alt="stup albine">
         <h3>  Află mai multe despre noi! </h3>
         <section class="showcase">
             <div class="container grid">
