--- a/magazin.html
+++ b/magazin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magazin</title>
-    <link rel="icon" href="./Photo/photo4.png" type="image/icon type">
+    <link rel="icon" href="./Photo/photo4.png" type="image/png">
     <link rel="stylesheet" href="style-sheet.css">
 </head>
 <body>
