--- a/Locatie.html
+++ b/Locatie.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="main.header">
+    <header class="main-header">
         <div class="logo">
             <img class="img" src="poze/logo.jpeg"
                  alt="Casa Boemia Logo">
@@ -22,21 +22,19 @@
                 <a class="phonenr" href="tel:+40732324422">0742424422</a>
             </div>
         </div>
-        <header>
-            <nav class="nav">
-                <a class="nav-link" href="index.html">Acasa</a>
-                <a class="nav-link" href="servicii.html">Servicii</a>
-                <a class="nav-link" href="Locatie.html">Locatie</a>
-                <a class="nav-link" href="contact.html">Contact</a>
-            </nav>
-        </header>
-    </div>
+        <nav class="nav">
+            <a class="nav-link" href="index.html">Acasa</a>
+            <a class="nav-link" href="servicii.html">Servicii</a>
+            <a class="nav-link" href="Locatie.html">Locatie</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+    </header>
     <div class="main">
         <div class="description">
             <h1>Locatie</h1>
-            <p> Va oferim exact locul in care sa va aduceți părinții și bunicii vostri dragi!<br>
+            <p> Va oferim exact locul in care sa va aduceți părinții și bunicii vostri dragi! <br>
              Centrul de îngrijire este complet echipat cu facilitați de top intr-un mediu familiar ce pune la dispoziție:</p>
-            <ul>
+            <ul class="lista-locatie">
                 <li>camere cu 1 pat / 2 paturi - baie proprie</li>
                 <li>camere cu 3/4  paturi</li>
                 <li>TV / cablu TV / Telefon</li>
@@ -48,37 +46,26 @@
                 <li>Programe individualizate permanent.</li>
             </ul> 
             <h3>Galerie</h3>   
-            <img src="poze/5.jpg"
-                alt="Dormitor 1">
-            <img src="poze/6.jpg"
-                alt="Dormitor 1">
-            <img src="poze/7.jpg"
-                alt="Dormitor 1">
-            <img src="poze/8.jpg"
-                alt="Dormitor 1">
-            <img src="poze/9.jpg"
-                alt="Dormitor 2">
-            <img src="poze/3.jpg"
-                alt="Dormitor 2">
-            <img src="poze/4.jpg"
-                alt="Dormitor 2">
-            <img src="poze/2.jpg"
-                alt="Dormitor 2">
-            <img src="poze/1.jpg"
-                alt="Dormitor 2">
-            <img src="poze/10.jpg"
-                alt="Receptie">
-            <img src="poze/11.jpg"
-                alt="Terasa">
-            <img src="poze/12.jpg"
-                alt="Sala de recreere">
-            <img src="poze/casaboemiaafara.jpeg"
-                alt="Exteriorul Casei">
+            <div class="galerie">
+            <img src="poze/5.jpg" alt="Dormitor 1">
+            <img src="poze/6.jpg" alt="Dormitor 1">
+            <img src="poze/7.jpg" alt="Dormitor 1">
+            <img src="poze/13.jpg" alt="Dormitor 1">
+            <img src="poze/8.jpg" alt="Dormitor 1">
+            <img src="poze/9.jpg" alt="Dormitor 2">
+            <img src="poze/3.jpg" alt="Dormitor 2">
+            <img src="poze/4.jpg" alt="Dormitor 2">
+            <img src="poze/2.jpg" alt="Dormitor 2">
+            <img src="poze/1.jpg" alt="Dormitor 2">
+            <img src="poze/10.jpg" alt="Receptie">
+            <img src="poze/11.jpg" alt="Terasa">
+            <img src="poze/12.jpg" alt="Sala de recreere">
+            <img src="poze/exterior.jpg" alt="Exteriorul Casei">
+            </div>
         </div>
     </div>
     <footer class="description"> 
-        Casa Boemia Giroc &copy; 2023. 
-        Toate drepturile sunt rezervate.
-        </footer>
+        Casa Boemia Giroc &copy; 2023. <br>Toate drepturile sunt rezervate.
+    </footer>
 </body>
 </html>
