--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="main.header">
+    <header class="main-header">
         <div class="logo">
             <img class="img" src="poze/logo.jpeg"
                  alt="Casa Boemia Logo">
@@ -22,19 +22,17 @@
                 <a class="phonenr" href="tel:+40732324422">0742424422</a>
             </div>
         </div>
-        <header>
-            <nav class="nav">
-                <a class="nav-link" href="index.html">Acasa</a>
-                <a class="nav-link" href="servicii.html">Servicii</a>
-                <a class="nav-link" href="Locatie.html">Locatie</a>
-                <a class="nav-link" href="contact.html">Contact</a>
-            </nav>
-        </header>
-    </div>
-    <div class="main">
+        <nav class="nav">
+            <a class="nav-link" href="index.html">Acasa</a>
+            <a class="nav-link" href="servicii.html">Servicii</a>
+            <a class="nav-link" href="Locatie.html">Locatie</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="main-contact">
         <h1>Contact</h1>
         <div class="contact">
-            <div class="description">
+            <div class="icoanecontact">
                 <i class="material-icons">phone</i>
                 <i class="material-icons">location_on</i>
                 <i class="material-icons">email</i>
@@ -47,12 +45,11 @@
                 <a class="phonenr" href="https://www.facebook.com/people/Casa-Boemia-Giroc/100085536936785/">Casa Boemia Giroc</a>
             </div>
         </div>
-        <img src="poze/casaboemiaafara.jpeg"
+        <img src="poze/exterior.jpg"
          alt="Casa Boemia Exterior">
     </div>
     <footer class="description"> 
-        Casa Boemia Giroc &copy; 2023. 
-        Toate drepturile sunt rezervate.
+        Casa Boemia Giroc &copy; 2023. <br>Toate drepturile sunt rezervate.
     </footer>
 </body>
 </html>
