--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="main.header">
+    <header class="main-header">
         <div class="logo">
             <img class="img" src="poze/logo.jpeg"
                  alt="Casa Boemia Logo">
@@ -22,56 +22,40 @@
                 <a class="phonenr" href="tel:+40732324422">0742424422</a>
             </div>
         </div>
-        <header>
-            <nav class="nav">
-                <a class="nav-link" href="index.html">Acasa</a>
-                <a class="nav-link" href="servicii.html">Servicii</a>
-                <a class="nav-link" href="Locatie.html">Locatie</a>
-                <a class="nav-link" href="contact.html">Contact</a>
-            </nav>
-        </header>
-    </div>
-    <div class="main">
+        <nav class="nav">
+            <a class="nav-link" href="index.html">Acasa</a>
+            <a class="nav-link" href="servicii.html">Servicii</a>
+            <a class="nav-link" href="Locatie.html">Locatie</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="main-index">
         <h1>Centru rezidential pentru persoane varstnice</h1>
-        <div class="description">
-            <p>Confortul și grija pentru seniorii noștri sunt principalele coordonate ale activității care o desfășuram zilnic!
-            <br> Va oferim exact locul in care sa va aduceți părinții și bunicii: cald, primitor, confortabil. 
-            Viața rezidenților se schimba in totalitate și mai ales starea lor de spirit, intr-un centru in care sunt respectate standardele de calitate și in care personalul este dedicat in totalitate, lor.</p>
-            <img src="poze/cuplupeplaja.jpeg"
-                alt="Two old people walking on the beach"> 
-            <p>Centrul nostru de asistenţă , îngrijire şi tratament vine ca o soluţie la dilema copiilor care au părinţi în vârstă,
-                faţă de care sunt recunoscători pentru toată investiţia şi doresc să le ofere o bătrâneţe liniştită în mediul cel mai plăcut, cu îngrijiri medico-sociale specializate.
-                De aceea, pentru că ne pasă şi iubim oamenii, acordăm o atenţie deosebită persoanelor de vârsta a treia,
-                dăruind şi investind tot ce ţine de noi pentru a fi profesionişti în serviciile furnizate şi dorim să fim aproape de inimile rezidenţilor nostri. </p>
-        </div>
+        <p class="text">Confortul și grija pentru seniorii noștri sunt principalele coordonate ale activității care o desfășuram zilnic!
+        <br> Va oferim exact locul in care sa va aduceți părinții și bunicii: cald, primitor, confortabil. 
+        Viața rezidenților se schimba in totalitate și mai ales starea lor de spirit, intr-un centru in care sunt respectate standardele de calitate și in care personalul este dedicat in totalitate, lor.</p>
+        <img class="pozacuplu" src="poze/cuplupeplaja.jpeg" alt="Two old people walking on the beach"> 
+        <p class="text">Centrul nostru de asistenţă, îngrijire şi tratament vine ca o soluţie la dilema copiilor care au părinţi în vârstă,
+        faţă de care sunt recunoscători pentru toată investiţia şi doresc să le ofere o bătrâneţe liniştită în mediul cel mai plăcut, cu îngrijiri medico-sociale specializate.</p>            <p class="text2">De aceea, pentru că ne pasă şi iubim oamenii, acordăm o atenţie deosebită persoanelor de vârsta a treia,
+        dăruind şi investind tot ce ţine de noi pentru a fi profesionişti în serviciile furnizate şi dorim să fim aproape de inimile rezidenţilor nostri. </p>
         <div class="icons">
-            <i class="material-icons">medical_services</i>
-            <p>Asistenta medicala 24/24h</p>
-            <i class="material-icons">restaurant</i>
-            <p>Regim personalizat</p>
-            <i class="material-icons">mood</i>
-            <p>Activitati recreative</p>
+          <i class="material-icons">medical_services</i>
+          <p>Asistenta medicala 24/24h</p>
+          <i class="material-icons">restaurant</i>
+          <p>Regim personalizat</p>
+          <i class="material-icons">mood</i>
+          <p>Activitati recreative</p>
         </div>
-        <div class="description">
-            <p>Găzduim inclusiv persoane vârstnice independente, care nu se confruntă cu nicio boală gravă, dar care, odată cu pensionarea, 
-                resimt acut nevoia de a avea o viață socială, de a aparține unei comunități și de a nu duce grija unor sarcini cotidiene istovitoare, printre care îngrijirea curții, spălatul rufelor, mersul la cumpărături si multe alte cele.
-            <br> Astfel, există numeroase motive pentru care bătrânilor le-ar fi mai bine să locuiască într-un centru rezidențial destinat nevoilor lor.</p>
-            <img src="poze/proiect.jpg"
-                alt="An Ipad near a bed">
-            <p>Noi, cei din echipa Casa Boemia, oferim fiecărui senior îngrijirea medicală de care are nevoie, în funcție de afecțiunea cu care se confruntă precum: 
-                <ul>
-                    <li>Demență</li> 
-                    <li>Diabet</li> 
-                    <li>AVC</li>
-                    <li>Parkinson</li> 
-                </ul>
-                <p>În centrele rezidențiale Casa Boemia, pacienții sunt consultați zilnic, iar tratamentul medical recomandat de medici este întotdeauna respectat și atent monitorizat. 
-            Echipa noastră este alcătuită din medici generaliști, medici specialiști colaboratori (psihiatri, ortopezi, cardiologi, neurologi), psihologi, toți cu o vastă experiență în domeniu și foarte atenți la nevoile fiecărui pacient.
-            Alături de noi, îi oferi uneia dintre cele mai importante persoane din viața ta șansa la bătrânețea sigură, demnă și liniștită pe care o merită.</p>
-        </div>
+        <p class="text3">Găzduim inclusiv persoane vârstnice independente, care nu se confruntă cu nicio boală gravă, dar care, odată cu pensionarea, 
+        resimt acut nevoia de a avea o viață socială, de a aparține unei comunități și de a nu duce grija unor sarcini cotidiene istovitoare, printre care îngrijirea curții, spălatul rufelor, mersul la cumpărături si multe alte cele.            Astfel, există numeroase motive pentru care bătrânilor le-ar fi mai bine să locuiască într-un centru rezidențial destinat nevoilor lor.</p>
+        <img src="poze/proiect.jpg" class="ipad" alt="An Ipad near a bed">
+        <p class="text4">Noi, cei din echipa Casa Boemia, oferim fiecărui senior îngrijirea medicală de care are nevoie, în funcție de afecțiunea cu care se confruntă precum: 
+        În centrele rezidențiale Casa Boemia, pacienții sunt consultați zilnic, iar tratamentul medical recomandat de medici este întotdeauna respectat și atent monitorizat. </p>
+        <p class="text5" >Echipa noastră este alcătuită din medici generaliști, medici specialiști colaboratori (psihiatri, ortopezi, cardiologi, neurologi), psihologi, toți cu o vastă experiență în domeniu și foarte atenți la nevoile fiecărui pacient.
+        Alături de noi, îi oferi uneia dintre cele mai importante persoane din viața ta șansa la bătrânețea sigură, demnă și liniștită pe care o merită. </p>
     </div>
     <footer class="description"> 
-    Casa Boemia Giroc &copy; 2023. Toate drepturile sunt rezervate.
+    Casa Boemia Giroc &copy; 2023. <br>Toate drepturile sunt rezervate.
     </footer>
 </body>
 </html>
