--- a/servicii.html
+++ b/servicii.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="main.header">
+    <header class="main-header">
         <div class="logo">
             <img class="img" src="poze/logo.jpeg"
                  alt="Casa Boemia Logo">
@@ -22,21 +22,19 @@
                 <a class="phonenr" href="tel:+40732324422">0742424422</a>
             </div>
         </div>
-        <header>
-            <nav class="nav">
-                <a class="nav-link" href="index.html">Acasa</a>
-                <a class="nav-link" href="servicii.html">Servicii</a>
-                <a class="nav-link" href="Locatie.html">Locatie</a>
-                <a class="nav-link" href="contact.html">Contact</a>
-            </nav>
-        </header>
-    </div>
+        <nav class="nav">
+            <a class="nav-link" href="index.html">Acasa</a>
+            <a class="nav-link" href="servicii.html">Servicii</a>
+            <a class="nav-link" href="Locatie.html">Locatie</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+    </header>
     <div class="main">
         <div class="description">
             <h1>Servicii</h1>
             <div class="phone">
                 <i class="material-icons">medical_services</i>
-                <h3>Oferim urmatoarele servicii medicale:</h3>
+                <h3>Servicii medicale</h3>
             </div>
             <ul>
                 <li>Monitorizare permanentă oferită de către un asistent medical care asigură administrare tratament oral, injectabil, perfuzabil conform prescripției medicale</li>
@@ -68,7 +66,7 @@
         </div>
     </div>
     <footer class="description"> 
-    Casa Boemia Giroc &copy; 2023. Toate drepturile sunt rezervate.
+        Casa Boemia Giroc &copy; 2023. <br>Toate drepturile sunt rezervate.
     </footer>
 </body>
 </html>
