--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,7 @@
                 <a class="phonenr" href="https://www.facebook.com/people/Casa-Boemia-Giroc/100085536936785/">Casa Boemia Giroc</a>
             </div>
         </div>
-        <img src="poze/exterior.jpg"
-         alt="Casa Boemia Exterior">
+        <img src="poze/exterior.jpg" alt="Casa Boemia Exterior" class="exterior">
     </div>
     <footer class="description"> 
         Casa Boemia Giroc &copy; 2023. <br>Toate drepturile sunt rezervate.
